--- a/django-dispensa/wheelie/client/scss/layout/_splash.scss
+++ b/django-dispensa/wheelie/client/scss/layout/_splash.scss
@@ -11,4 +11,8 @@
   .no-webp & {
     background: url("/static/images/splash.jpg") center / cover no-repeat fixed;
   }
+
+  @media #{$small}, #{$medium} {
+    background-attachment: scroll !important;
+  }
 }
